<resources>
    <string name="app_name">First - Degree</string>
    <string name="title_app">"first degree "</string>
    <string name="title_coefficient_a">Coefficient a:</string>
    <string name="title_coefficient_b">Coefficient b:</string>
    <string name="title_solution">Solution</string>
    <string name="title_next">Next</string>
    <string name="title_exit">Exit</string>
    <string name="title_result">Result:</string>
    <string name="title_infinity">Infinity</string>
    <string name="title_nosolution">No solution</string>
    <string name="title_english">English</string>
    <string name="title_vietnamese">Vietnamese</string>
</resources>